fix(career-job-cards): 10845-spacing-issues

--- a/packages/styles/scss/components/card-group/_card-group.scss
+++ b/packages/styles/scss/components/card-group/_card-group.scss
@@ -1,5 +1,5 @@
 /**
- * Copyright IBM Corp. 2016, 2025
+ * Copyright IBM Corp. 2016, 2026
  *
  * This source code is licensed under the Apache-2.0 license found in the
  * LICENSE file in the root directory of this source tree.
@@ -152,7 +152,7 @@
 
     &[grid-mode='condensed'] {
       .#{$prefix}--card {
-        margin-block-end: $spacing-05;
+        margin-block-end: 0;
       }
     }
 
